--- a/src/scss/Dashboard/Dashboard.scss
+++ b/src/scss/Dashboard/Dashboard.scss
@@ -1,3 +1,9 @@
 @import '../mixins';
 @import '../resets';
 @import '../variables';
+
+.container {
+    p {
+        color: $green-secondary;
+    }
+}
